--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,6 @@ color: var(--color-black-secondary);
 }
 /* navigation */
 .nav-studio {
-  font-family:'Roboto'; 
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
@@ -45,7 +44,6 @@ color: var(--color-black)
 }
 
 .nav-studio:hover{
-font-family: 'Roboto';
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
@@ -54,7 +52,6 @@ color: var(--color-blue);
 }
 
 .nav-portfolio { 
-font-family: 'Roboto';
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
@@ -67,7 +64,6 @@ color: var(--color-black)}
 color: var(--color-blue);
 }
 .nav-contact{
-font-family: 'Roboto';
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
@@ -77,7 +73,6 @@ color: var(--color-black)
 .nav-contact:hover { color: var(--color-blue);
 }
 .header-mail {
-font-family: 'Roboto';
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
@@ -85,7 +80,6 @@ letter-spacing: 0.02em;
 color: var(--color-grey);
 }
 .header-mail:hover{
-font-family: 'Roboto';
 font-weight: 500;
 font-size: 14px;
 line-height: 16px;
@@ -94,7 +88,6 @@ color: var(--color-blue);
 }
 
 .header-phone {
-  font-family: 'Roboto';
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
@@ -108,7 +101,6 @@ color: var(--color-grey);
 .main-section {background: var(--color-black-secondary);
 }
 .main-section-title{
-font-family: 'Roboto';
 font-weight: 900;
 font-size: 44px;
 line-height: 60px;
@@ -118,7 +110,7 @@ text-transform: uppercase;
 color: var(--color-white);
 }
 .main-section-button{
-background: var(--color-blue);
+background-color: var(--color-blue);
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 font-family: inherit;
@@ -130,13 +122,13 @@ letter-spacing: 0.06em;
 color: var(--color-white);
 }
 .main-section-button:focus{ 
-background: #188CE8;
+background-color: var(--color-blue-secondary);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
 .main-section-button:hover{ 
 cursor: pointer;
-background: #188CE8;
+background-color: var(--color-blue-secondary);
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 }
@@ -152,7 +144,6 @@ clip: rect(0 0 0 );
 clip-path: inset(50%); margin: -1px;
 }
 .main-qualities-title {
-font-family: 'Roboto';
 font-weight: 700;
 font-size: 14px;
 line-height: 1.14;
@@ -161,7 +152,6 @@ text-transform: uppercase;
 color: var(--color-black);
 }
 .main-qualities-discription {
-font-family: 'Roboto';
 font-weight: 400;
 font-size: 14px;
 line-height: 1.7;
@@ -170,7 +160,6 @@ color: var(--color-grey);
 }
 
 .what-doing-title {
-font-family:'Roboto' ;
 font-weight: 700;
 font-size: 36px;
 line-height: 1.17;
@@ -181,7 +170,6 @@ color: var(--color-black)
 .our-time {background: var(--color-white-secondary);
 }
 .our-time-title {
-font-family: 'Roboto';
 font-weight: 700;
 font-size: 36px;
 line-height: 1.17;
@@ -190,7 +178,6 @@ letter-spacing: 0.03em;
 color: var(--color-black)
 }
 .our-time-name {
-font-family: 'Roboto';
 font-weight: 500;
 font-size: 16px;
 line-height: 1.12;
@@ -199,7 +186,6 @@ letter-spacing: 0.03em;
 color: var(--color-black)
 }
 .our-time-position {
-font-family: 'Roboto';
 font-style: ;
 font-weight: 400;
 font-size: 16px;
@@ -214,13 +200,12 @@ box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0p
 border-radius: 0px 0px 4px 4px;
 }
 /* footer */
-.footer {background: var(--color-black-secondary);
+.footer {background-color: var(--color-black-secondary);
 }
 .studio-footer {
 color: var(--color-white);
 }
 .footer-mail{
-font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -230,7 +215,6 @@ font-family: 'Roboto';
 }
 .footer-mail:hover{ color: var(--color-blue);}
 .footer-tel{
-font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -240,7 +224,6 @@ font-family: 'Roboto';
 }
 .footer-tel:hover{ color: var(--color-blue);}
 .footer-adress {
-font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -267,12 +250,12 @@ background-color: var(--color-white-secondary);
 .portfolio-filter-all:hover{ 
   cursor: pointer;
 color: var(--color-white);
-background: var(--color-blue);
+background-color: var(--color-blue);
 box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 border-radius: 4px;
 }
 .portfolio-filter-all:focus{color: var(--color-white);
-background: var(--color-blue);
+background-color: var(--color-blue);
 box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 border-radius: 4px;}
 .portfolio-filter-web{
@@ -312,7 +295,7 @@ background-color: var(--color-white-secondary);
 .portfolio-filter-appendix:hover{
   cursor: pointer; 
 color: var(--color-white);
-background: var(--color-blue);
+background-color: var(--color-blue);
 border-radius: 4px;
 }
 .portfolio-filter-appendix:focus {
@@ -336,12 +319,12 @@ background-color: var(--color-white-secondary);
 .portfolio-filter-design:hover{
   cursor: pointer;
 color: var(--color-white);
-background: var(--color-blue);
+background-color: var(--color-blue);
 border-radius: 4px;
 }
 .portfolio-filter-design:focus {
 color: var(--color-white);
-background: var(--color-blue);
+background-color: var(--color-blue);
 box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 border-radius: 4px;
 }
@@ -361,11 +344,11 @@ background-color: var(--color-white-secondary);
 .portfolio-filter-marketing:hover{
   cursor: pointer;
 color: var(--color-white);
-  background: var(--color-blue);
+  background-color: var(--color-blue);
 border-radius: 4px;}
 .portfolio-filter-marketing:focus {
   color: var(--color-white);
-  background: var(--color-blue);
+  background-color: var(--color-blue);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
@@ -373,18 +356,16 @@ border-radius: 4px;}
 /* portfolio group */
 /* group */
 .portfolio-group{
-background: var(--color-white);
+background-color: var(--color-white);
 border: 1px solid var(--color-primary);
 }
 .portfolio-group-title{
-font-family: 'Roboto';
 font-size: 18px;
 line-height: 2;
 letter-spacing: 0.06em;
 color: var(--color-black);
 }
 .portfolio-group-p{
-font-family: 'Roboto';
 font-size: 16px;
 line-height: 1.9;
 letter-spacing: 0.03em;
