--- a/css/styles.css
+++ b/css/styles.css
@@ -23,9 +23,10 @@ ul {
 }
 h1{ margin: 0px;}
 h2 { margin: 0px;}
+h3{ margin: 0px;}
 
 p {margin: 0px;}
-li{ justify-content: space-between;}
+
 
 /* header */
 
@@ -33,11 +34,14 @@ a {
   text-decoration: none;
 }
 /* logo */
-.container-header {
-  width: 1200px;
-  background-color: aqua;
+.container-header { margin: auto;
+   width: 1200px; height: 80px;
+  display: flex;
 }
 .logo {
+  padding: 24px 0px 0px 15px;
+  margin-right: 93px;
+
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -57,6 +61,7 @@ a {
 }
 /* navigation */
 .nav-studio {
+  padding-right: 50px;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -73,14 +78,18 @@ a {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--color-blue);
+  }
+  .nav-portfolio{
+    padding-right: 50px;
+  }
+.nav-contact{
 }
 .navigation {
-  background-color: greenyellow;
+  display: flex;
+  padding: 32px 0px 32px 0px;
+  margin-right: 339px;
 }
-.contact-tel {
-}
-.contact-mail {
-}
+
 
 .nav-portfolio {
   font-weight: 500;
@@ -105,13 +114,16 @@ a {
 .nav-contact:hover {
   color: var(--color-blue);
 }
-.header-mail {
+
+.header-mail { padding-right: 50px;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--color-grey);
 }
+.contacts{ padding-top: 32px;
+display: flex;}
 .header-mail:hover {
   font-weight: 500;
   font-size: 14px;
@@ -132,13 +144,16 @@ a {
 }
 /* main section1 */
 .container-main{
-  width: 1200px; background-color: orange;
-
+  margin: auto;
+  width: 1200px;
 }
 .main-section {
   background: var(--color-black-secondary);
+  margin-bottom: 94px;
 }
-.main-section-title {
+.main-section-title { display: block;
+  padding-top: 200px;
+  padding-bottom: 20px;
   font-weight: 900;
   font-size: 44px;
   line-height: 60px;
@@ -148,6 +163,10 @@ a {
   color: var(--color-white);
 }
 .main-section-button {
+  margin-left: 500px;
+  margin-bottom: 200px;
+  padding: 10px 32px 10px 32px;
+  text-decoration: none;
   background-color: var(--color-blue);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -157,6 +176,8 @@ a {
   font-size: 16px;
   line-height: 1.9;
   letter-spacing: 0.06em;
+align-items: center;
+text-align: center;
   color: var(--color-white);
 }
 .main-section-button:focus {
@@ -171,10 +192,30 @@ a {
   border-radius: 4px;
 }
 /* main-qualities */
-.container-qualities{ width: 1200px;
-  background-color: greenyellow;
+.container-qualities{ 
+  
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 94px;
+  width: 1170px;
 
 }
+.qualities-box{ display: flex;}
+.qualities-box1{ margin-right: 30px;
+width: 270px;
+}
+.qualities-box2{
+  margin-right: 30px;
+width: 270px;
+}
+.qualities-box3{margin-right: 30px;
+width: 270px;
+}
+.qualities-box4{
+width: 270px;
+}
+
+
 
 .visually-hidden {
   position: absolute;
@@ -205,13 +246,24 @@ a {
   color: var(--color-grey);
 }
 /* what-doing */
-.container-what-doing{ width: 1200px;
-  background-color: #2196f3;
+.container-what-doing{
+  margin-left: auto; 
+  width: 1170px;
+  margin-right: auto;
+  margin-bottom: 94px;
 
 }
-
-.what-doing-title {
-  margin: 0px;
+.what-doing-box{
+  display: flex;
+}
+.what-doing-box1{
+  margin-right: 30px;
+}
+.what-doing-box2{margin-right: 30px;
+}
+.what-doing-box3{ padding-left: 0px;
+}
+.what-doing-title { margin-bottom: 60px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -220,16 +272,31 @@ a {
   color: var(--color-black);
   }
   /* our-time */
-  .container-our-time{ width: 1200px;
-    background-color: aqua;
-
+  .img{
+    display: block;
+    max-width: 100%;
+    height: auto;
   }
+  .container-our-time{
+    width: 1170px;
+    background-color:
+  
+  }
+  /* our-time */
+  .container-our-time{
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .time-box{ 
+    padding-bottom: 94px;
+  display: flex;}
 
 .our-time {
   background: var(--color-white-secondary);
 }
 .our-time-title {
-  margin: 0px;
+  padding-top: 94px;
+  margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -241,30 +308,51 @@ a {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.12;
-  text-align: center;
   letter-spacing: 0.03em;
   color: var(--color-black);
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 .our-time-position {
-  margin: 0px;
-  font-style: ;
+  padding-bottom: 30px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.12;
-  text-align: center;
-  letter-spacing: 0.03em;
   color: var(--color-grey);
+  text-align: center;
 }
-.our-time-card { border: solid 1px red;
-  background: var(--color-white);
+
+.our-time-card1 { 
+background-color: var(--color-white);
+  margin-right: 30px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.our-time-card2 {
+  margin-right: 30px; 
+  background-color: var(--color-white);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.our-time-card3 {
+  margin-right: 30px;
+  background-color: var(--color-white);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.our-time-card4 { display: inline; 
+  background-color: var(--color-white);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 /* footer */
-.container-footer{
+.container-footer{ margin-left: auto; margin-right: auto;
   width: 1200px;
-  background-color: orange;
 
 }
 .footer {
@@ -295,7 +383,25 @@ a {
 .footer-tel:hover {
   color: var(--color-blue);
 }
-.footer-adress {
+.address-box{padding: 0px 0px 60px 15px;
+
+
+}
+.logo-foter{  display: block;
+  padding: 60px 0px 0px 15px;
+  margin-bottom: 20px;
+
+
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.9;
+  letter-spacing: 0.03em;
+  color: var(--color-blue-secondary);
+
+}
+.footer-address {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -303,12 +409,49 @@ a {
   letter-spacing: 0.03em;
   color: var(--color-white);
 }
-.footer-adress:hover {
+.footer-address:hover {
   color: var(--color-blue);
 }
 
 /* portfolio filter*/
+.portfolio{
+
+}
+.portfolio-container{width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 94px;
+
+}
+.filters{
+  margin-left: auto;
+  margin-right: auto;
+}
+.filter-box{margin-left: 311px;
+  margin-bottom: 24px;
+  width: 575px;
+  display: flex;
+  
+
+}
+.portfolio-group-box1 {
+  display: flex;
+
+}
+.portfolio-group-box2 {
+  display: flex;
+
+}
+.portfolio-group-box3 {
+  display: flex;
+
+}
+
 .portfolio-filter-all {
+  border-color:transparent;
+  width: 73px; height: 38px;
+    display: inline-block;
+  margin-right: 8px;
   font-family: inherit;
   font-style: inherit;
   font-weight: 500;
@@ -335,6 +478,10 @@ a {
   border-radius: 4px;
 }
 .portfolio-filter-web {
+   border-color:transparent;
+  width: 125px; height: 38px;
+    display: inline-block;
+  margin-right: 8px;
   font-family: inherit;
   font-style: inherit;
   font-weight: 500;
@@ -360,6 +507,10 @@ a {
 }
 
 .portfolio-filter-appendix {
+   border-color:transparent;
+  width: 112px; height: 38px;
+    display: inline-block;
+  margin-right: 8px;
   font-family: inherit;
   font-style: inherit;
   font-weight: 500;
@@ -385,6 +536,10 @@ a {
 }
 
 .portfolio-filter-design {
+   border-color:transparent;
+  width: 103px; height: 38px;
+    display: inline-block;
+  margin-right: 8px;
   font-family: inherit;
   font-style: inherit;
   font-weight: 500;
@@ -410,6 +565,9 @@ a {
 }
 
 .portfolio-filter-marketing {
+   border-color:transparent;
+  width: 130px; height: 38px;
+    display: inline-block;
   font-family: inherit;
   font-style: inherit;
   font-weight: 500;
@@ -437,19 +595,61 @@ a {
 
 /* portfolio group */
 /* group */
-.portfolio-group {
-  background-color: var(--color-white);
-  border: 1px solid var(--color-primary);
-}
+
 .portfolio-group-title {
+  margin-top: 20px;
+  margin-left: 24px;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--color-black);
 }
 .portfolio-group-p {
+  margin-top: 4px;
+  margin-left: 24px;
+  margin-bottom: 20px;
   font-size: 16px;
   line-height: 1.9;
   letter-spacing: 0.03em;
   color: var(--color-grey);
+}
+.portfolio-group1{margin-bottom: 30px;
+  margin-right: 30px;
+  background-color: var(--color-white);
+  border: 1px solid var(--color-primary);
+}
+.portfolio-group2 {margin-bottom: 30px;
+  margin-right: 30px;
+  background-color: var(--color-white);
+  border: 1px solid var(--color-primary);
+}
+.portfolio-group3 {margin-bottom: 30px;
+  background-color: var(--color-white);
+  border: 1px solid var(--color-primary);
+}
+.portfolio-group4 {margin-bottom: 30px;
+  margin-right: 30px;
+  background-color: var(--color-white);
+  border: 1px solid var(--color-primary);
+}
+.portfolio-group5 {margin-bottom: 30px;
+  margin-right: 30px;
+  background-color: var(--color-white);
+  border: 1px solid var(--color-primary);
+}
+.portfolio-group6 {margin-bottom: 30px;
+  background-color: var(--color-white);
+  border: 1px solid var(--color-primary);
+}
+.portfolio-group7 {margin-right: 30px;
+  background-color: var(--color-white);
+  border: 1px solid var(--color-primary);
+}
+.portfolio-group8 {margin-right: 30px;
+  background-color: var(--color-white);
+  border: 1px solid var(--color-primary);
+}
+.portfolio-group9 {
+  background-color: var(--color-white);
+  border: 1px solid var(--color-primary);
 }
