--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,14 @@ body {
   font-family: "Roboto";
   margin: 0px;
 }
-*, *::before,*::after{box-sizing: inherit;}
-.container{ width: 1200px;}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+.container {
+  width: 1200px;
+}
 
 :root {
   --color-black: #212121;
@@ -21,12 +27,19 @@ ul {
   padding-left: 0px;
   margin: 0px;
 }
-h1{ margin: 0px;}
-h2 { margin: 0px;}
-h3{ margin: 0px;}
+h1 {
+  margin: 0px;
+}
+h2 {
+  margin: 0px;
+}
+h3 {
+  margin: 0px;
+}
 
-p {margin: 0px;}
-
+p {
+  margin: 0px;
+}
 
 /* header */
 
@@ -34,8 +47,10 @@ a {
   text-decoration: none;
 }
 /* logo */
-.container-header { margin: auto;
-   width: 1200px; height: 80px;
+.container-header {
+  margin: auto;
+  width: 1200px;
+  height: 80px;
   display: flex;
 }
 .logo {
@@ -78,19 +93,17 @@ a {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--color-blue);
-  }
-  .nav-portfolio{
-    padding-right: 50px;
-  }
-.nav-contact{
+}
+.nav-portfolio {
+  padding-right: 50px;
+}
+.nav-contact {
 }
 .navigation {
   display: flex;
   padding: 32px 0px 32px 0px;
-  margin-right: 339px;
+  margin-right: 344px;
 }
-
-
 .nav-portfolio {
   font-weight: 500;
   font-size: 14px;
@@ -115,15 +128,18 @@ a {
   color: var(--color-blue);
 }
 
-.header-mail { padding-right: 50px;
+.header-mail {
+  margin-right: 50px;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--color-grey);
 }
-.contacts{ padding-top: 32px;
-display: flex;}
+.contacts {
+  padding-top: 32px;
+  display: flex;
+}
 .header-mail:hover {
   font-weight: 500;
   font-size: 14px;
@@ -143,15 +159,19 @@ display: flex;}
   color: var(--color-blue);
 }
 /* main section1 */
-.container-main{
-  margin: auto;
+.container-main {
+  margin-left: auto;
+  margin-right: auto;
   width: 1200px;
 }
-.main-section {
+.main-section { margin-left: auto;
+  margin-right: auto;
   background: var(--color-black-secondary);
   margin-bottom: 94px;
 }
-.main-section-title { display: block;
+.main-section-title {margin-left: 252px;
+  margin-right:252px;
+  display: block;
   padding-top: 200px;
   padding-bottom: 20px;
   font-weight: 900;
@@ -162,9 +182,9 @@ display: flex;}
   text-transform: uppercase;
   color: var(--color-white);
 }
-.main-section-button {
-  margin-left: 500px;
-  margin-bottom: 200px;
+.main-section-button {width: 216px; height: 50px;
+  display: inline-block;
+  margin:  0px 492px 200px 482px;
   padding: 10px 32px 10px 32px;
   text-decoration: none;
   background-color: var(--color-blue);
@@ -176,8 +196,8 @@ display: flex;}
   font-size: 16px;
   line-height: 1.9;
   letter-spacing: 0.06em;
-align-items: center;
-text-align: center;
+  align-items: center;
+  text-align: center;
   color: var(--color-white);
 }
 .main-section-button:focus {
@@ -192,30 +212,30 @@ text-align: center;
   border-radius: 4px;
 }
 /* main-qualities */
-.container-qualities{ 
-  
+.container-qualities {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 94px;
   width: 1170px;
-
 }
-.qualities-box{ display: flex;}
-.qualities-box1{ margin-right: 30px;
-width: 270px;
+.qualities-box {
+  display: flex;
 }
-.qualities-box2{
+.qualities-box1 {
   margin-right: 30px;
-width: 270px;
+  width: 270px;
 }
-.qualities-box3{margin-right: 30px;
-width: 270px;
+.qualities-box2 {
+  margin-right: 30px;
+  width: 270px;
 }
-.qualities-box4{
-width: 270px;
+.qualities-box3 {
+  margin-right: 30px;
+  width: 270px;
 }
-
-
+.qualities-box4 {
+  width: 270px;
+}
 
 .visually-hidden {
   position: absolute;
@@ -246,50 +266,52 @@ width: 270px;
   color: var(--color-grey);
 }
 /* what-doing */
-.container-what-doing{
-  margin-left: auto; 
+.container-what-doing {
+  margin-left: auto;
   width: 1170px;
   margin-right: auto;
   margin-bottom: 94px;
-
 }
-.what-doing-box{
+.what-doing-box {
   display: flex;
 }
-.what-doing-box1{
+.what-doing-box1 {
   margin-right: 30px;
 }
-.what-doing-box2{margin-right: 30px;
+.what-doing-box2 {
+  margin-right: 30px;
 }
-.what-doing-box3{ padding-left: 0px;
+.what-doing-box3 {
+  padding-left: 0px;
 }
-.what-doing-title { margin-bottom: 60px;
+.what-doing-title {
+  margin-bottom: 60px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--color-black);
-  }
-  /* our-time */
-  .img{
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
-  .container-our-time{
-    width: 1170px;
-    background-color:
-  
-  }
-  /* our-time */
-  .container-our-time{
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .time-box{ 
-    padding-bottom: 94px;
-  display: flex;}
+}
+/* our-time */
+.img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.container-our-time {
+  width: 1170px;
+  background-color: ;
+}
+/* our-time */
+.container-our-time {
+  margin-left: auto;
+  margin-right: auto;
+}
+.time-box {
+  padding-bottom: 94px;
+  display: flex;
+}
 
 .our-time {
   background: var(--color-white-secondary);
@@ -323,15 +345,15 @@ width: 270px;
   text-align: center;
 }
 
-.our-time-card1 { 
-background-color: var(--color-white);
+.our-time-card1 {
+  background-color: var(--color-white);
   margin-right: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 .our-time-card2 {
-  margin-right: 30px; 
+  margin-right: 30px;
   background-color: var(--color-white);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -344,16 +366,18 @@ background-color: var(--color-white);
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.our-time-card4 { display: inline; 
+.our-time-card4 {
+  display: inline;
   background-color: var(--color-white);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 /* footer */
-.container-footer{ margin-left: auto; margin-right: auto;
+.container-footer {
+  margin-left: auto;
+  margin-right: auto;
   width: 1200px;
-
 }
 .footer {
   background-color: var(--color-black-secondary);
@@ -383,15 +407,13 @@ background-color: var(--color-white);
 .footer-tel:hover {
   color: var(--color-blue);
 }
-.address-box{padding: 0px 0px 60px 15px;
-
-
+.address-box {
+  padding: 0px 0px 60px 15px;
 }
-.logo-foter{  display: block;
+.logo-foter {
+  display: block;
   padding: 60px 0px 0px 15px;
   margin-bottom: 20px;
-
-
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -399,7 +421,6 @@ background-color: var(--color-white);
   line-height: 1.9;
   letter-spacing: 0.03em;
   color: var(--color-blue-secondary);
-
 }
 .footer-address {
   font-style: normal;
@@ -414,43 +435,39 @@ background-color: var(--color-white);
 }
 
 /* portfolio filter*/
-.portfolio{
-
+.portfolio {
 }
-.portfolio-container{width: 1170px;
+.portfolio-container {
+  width: 1170px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 94px;
-
 }
-.filters{
+.filters {
   margin-left: auto;
   margin-right: auto;
 }
-.filter-box{margin-left: 311px;
+.filter-box {
+  margin-left: 311px;
   margin-bottom: 24px;
   width: 575px;
   display: flex;
-  
-
 }
 .portfolio-group-box1 {
   display: flex;
-
 }
 .portfolio-group-box2 {
   display: flex;
-
 }
 .portfolio-group-box3 {
   display: flex;
-
 }
 
 .portfolio-filter-all {
-  border-color:transparent;
-  width: 73px; height: 38px;
-    display: inline-block;
+  border-color: transparent;
+  width: 73px;
+  height: 38px;
+  display: inline-block;
   margin-right: 8px;
   font-family: inherit;
   font-style: inherit;
@@ -478,9 +495,10 @@ background-color: var(--color-white);
   border-radius: 4px;
 }
 .portfolio-filter-web {
-   border-color:transparent;
-  width: 125px; height: 38px;
-    display: inline-block;
+  border-color: transparent;
+  width: 125px;
+  height: 38px;
+  display: inline-block;
   margin-right: 8px;
   font-family: inherit;
   font-style: inherit;
@@ -507,9 +525,10 @@ background-color: var(--color-white);
 }
 
 .portfolio-filter-appendix {
-   border-color:transparent;
-  width: 112px; height: 38px;
-    display: inline-block;
+  border-color: transparent;
+  width: 112px;
+  height: 38px;
+  display: inline-block;
   margin-right: 8px;
   font-family: inherit;
   font-style: inherit;
@@ -536,9 +555,10 @@ background-color: var(--color-white);
 }
 
 .portfolio-filter-design {
-   border-color:transparent;
-  width: 103px; height: 38px;
-    display: inline-block;
+  border-color: transparent;
+  width: 103px;
+  height: 38px;
+  display: inline-block;
   margin-right: 8px;
   font-family: inherit;
   font-style: inherit;
@@ -565,9 +585,10 @@ background-color: var(--color-white);
 }
 
 .portfolio-filter-marketing {
-   border-color:transparent;
-  width: 130px; height: 38px;
-    display: inline-block;
+  border-color: transparent;
+  width: 130px;
+  height: 38px;
+  display: inline-block;
   font-family: inherit;
   font-style: inherit;
   font-weight: 500;
@@ -613,39 +634,47 @@ background-color: var(--color-white);
   letter-spacing: 0.03em;
   color: var(--color-grey);
 }
-.portfolio-group1{margin-bottom: 30px;
+.portfolio-group1 {
+  margin-bottom: 30px;
   margin-right: 30px;
   background-color: var(--color-white);
   border: 1px solid var(--color-primary);
 }
-.portfolio-group2 {margin-bottom: 30px;
+.portfolio-group2 {
+  margin-bottom: 30px;
   margin-right: 30px;
   background-color: var(--color-white);
   border: 1px solid var(--color-primary);
 }
-.portfolio-group3 {margin-bottom: 30px;
+.portfolio-group3 {
+  margin-bottom: 30px;
   background-color: var(--color-white);
   border: 1px solid var(--color-primary);
 }
-.portfolio-group4 {margin-bottom: 30px;
+.portfolio-group4 {
+  margin-bottom: 30px;
   margin-right: 30px;
   background-color: var(--color-white);
   border: 1px solid var(--color-primary);
 }
-.portfolio-group5 {margin-bottom: 30px;
+.portfolio-group5 {
+  margin-bottom: 30px;
   margin-right: 30px;
   background-color: var(--color-white);
   border: 1px solid var(--color-primary);
 }
-.portfolio-group6 {margin-bottom: 30px;
+.portfolio-group6 {
+  margin-bottom: 30px;
   background-color: var(--color-white);
   border: 1px solid var(--color-primary);
 }
-.portfolio-group7 {margin-right: 30px;
+.portfolio-group7 {
+  margin-right: 30px;
   background-color: var(--color-white);
   border: 1px solid var(--color-primary);
 }
-.portfolio-group8 {margin-right: 30px;
+.portfolio-group8 {
+  margin-right: 30px;
   background-color: var(--color-white);
   border: 1px solid var(--color-primary);
 }
