--- a/css/styles.css
+++ b/css/styles.css
@@ -164,13 +164,15 @@ a {
   margin-right: auto;
   width: 1200px;
 }
-.main-section { margin-left: auto;
+.main-section {
+  margin-left: auto;
   margin-right: auto;
   background: var(--color-black-secondary);
   margin-bottom: 94px;
 }
-.main-section-title {margin-left: 252px;
-  margin-right:252px;
+.main-section-title {
+  margin-left: 252px;
+  margin-right: 252px;
   display: block;
   padding-top: 200px;
   padding-bottom: 20px;
@@ -182,9 +184,11 @@ a {
   text-transform: uppercase;
   color: var(--color-white);
 }
-.main-section-button {width: 216px; height: 50px;
+.main-section-button {
+  width: 216px;
+  height: 50px;
   display: inline-block;
-  margin:  0px 492px 200px 482px;
+  margin: 0px 492px 200px 482px;
   padding: 10px 32px 10px 32px;
   text-decoration: none;
   background-color: var(--color-blue);
@@ -277,12 +281,18 @@ a {
 }
 .what-doing-box1 {
   margin-right: 30px;
+  background: url(close-up-image-programer-working-his-desk-office_1098-18707.jpg);
+  mix-blend-mode: normal;
 }
 .what-doing-box2 {
   margin-right: 30px;
+  background: url(web-ui-designers-are-developing-application-smartphones-team-creators-is-
+  working-interface-mobile-phones_8119-2713.jpg);
 }
 .what-doing-box3 {
   padding-left: 0px;
+  background: url(creative-artist-web-design-with-
+  working-colour-selection-graphic-tablet_35674-1119.jpg);
 }
 .what-doing-title {
   margin-bottom: 60px;
@@ -351,6 +361,8 @@ a {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  background: url(4853.jpg);
+  border-radius: 0px;
 }
 .our-time-card2 {
   margin-right: 30px;
@@ -358,6 +370,8 @@ a {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  background: url(5844);
+  border-radius: 0px;
 }
 .our-time-card3 {
   margin-right: 30px;
@@ -365,6 +379,8 @@ a {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  background: url(16166.jpg);
+  border-radius: 0px;
 }
 .our-time-card4 {
   display: inline;
@@ -372,6 +388,8 @@ a {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  background: url(2968);
+  border-radius: 0px;
 }
 /* footer */
 .container-footer {
@@ -639,46 +657,55 @@ a {
   margin-right: 30px;
   background-color: var(--color-white);
   border: 1px solid var(--color-primary);
+  background: url(portfolio1.jpg);
 }
 .portfolio-group2 {
   margin-bottom: 30px;
   margin-right: 30px;
   background-color: var(--color-white);
   border: 1px solid var(--color-primary);
+  background: url(portfolio2.jpg);
 }
 .portfolio-group3 {
   margin-bottom: 30px;
   background-color: var(--color-white);
   border: 1px solid var(--color-primary);
+  background: url(portfolio-1.jpg);
 }
 .portfolio-group4 {
   margin-bottom: 30px;
   margin-right: 30px;
   background-color: var(--color-white);
   border: 1px solid var(--color-primary);
+  background: url(portfolio-2);
 }
 .portfolio-group5 {
   margin-bottom: 30px;
   margin-right: 30px;
   background-color: var(--color-white);
   border: 1px solid var(--color-primary);
+  background: url(portfolio5);
 }
 .portfolio-group6 {
   margin-bottom: 30px;
   background-color: var(--color-white);
   border: 1px solid var(--color-primary);
+  background: url(111);
 }
 .portfolio-group7 {
   margin-right: 30px;
   background-color: var(--color-white);
   border: 1px solid var(--color-primary);
+  background: url(portfolio7);
 }
 .portfolio-group8 {
   margin-right: 30px;
   background-color: var(--color-white);
   border: 1px solid var(--color-primary);
+  background:url(portfolio8.jpg);
 }
 .portfolio-group9 {
   background-color: var(--color-white);
   border: 1px solid var(--color-primary);
+  background: url(2910404);
 }
